Fixing spacings to design

--- a/app/frontend/stylesheets/_colours.scss
+++ b/app/frontend/stylesheets/_colours.scss
@@ -12,7 +12,7 @@ $palette: (
     orange: #F18F01,
     yellow: #F4E781,
     red: #DD0019,
-    light-gray: #E8F0FD,
+    light-gray: #E5E5E5,
     gray: #C4C4C4,
     dark-gray: #54585A,
     off-black: #2A2828
